2002-05-31  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* test/cond22.test: Set SHELL when calling $MAKE -e.

2002-05-31  Richard Boulton <richard@tartarus.org>

	Fix PR automake/326:
	* automake.in (define_objects_from_sources): Calculate the result in
	all conditions before passing this to subobjname to pick a name to
	store the result in.
	(subobjname): Expect a list of condition/value pairs as input.
	Combine this list and use it as the key to determine the variable name.
	* test/cond22.test: New file.
	* tests/Makefile.am (TESTS): Add cond21.test

2002-05-24  Alexandre Duret-Lutz  <duret_g@epita.fr>

	For PR automake/323:
	* m4/depend.m4: Missing comma.
	* tests/gcj4.test: New file.
	* tests/Makefile.am (TESTS): Add gcj4.test.
	Reported by David Pashley.

2002-05-14  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix for PR automake/322:
	* automake.in (read_am_file): Rename $was_rule as $prev_state, and
	set it with IN_RULE_DEF, IN_VAR_DEF, or IN_COMMENT as appropriate.
	Handle comments continued by backslashes.
	* tests/comment6.test: New file.
	* tests/Makefile.am (TESTS): Add comment6.test.
	Reported by Braden N. McDaniel.

2002-05-08  Charles Wilson  <cwilson@ece.gatech.edu>
            Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/progs.am (clean-%DIR%PROGRAMS): If Libtool is used, clean
	both `program$(EXEEXT)' and `program'; needed under Cygwin.
	* tests/libtool3.test: New file.
	* tests/Makefile.am (TESTS): Add libtool3.test.

2002-05-06  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* Makefile.am (FETCHFILES, fetch): Get INSTALL from Autoconf CVS.

2002-05-06  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Erase stamps from the Makefile that generates them.

	* automake.in (handle_configure): Append each used stamp to
	@distclean_config.  Don't warn about stamp-h in AC_OUTPUT, this
	file is not used anymore.
	* lib/am/clean.am (distclean-generic): Don't erase stamp-h and
	stamp-h[0-9]*.
	* tests/subdir6.test: New file.
	* tests/Makefile.am (TESTS): Add it.