@@ -120,6 +120,7 @@ Merijn de Jonge		M.de.Jonge@cwi.nl
 Michael Brantley	Michael-Brantley@deshaw.com
 Michel de Ruiter	mdruiter@cs.vu.nl
 Miles Bader		miles@ccs.mt.nec.co.jp
+Miloslav Trmac		trmac@popelka.ms.mff.cuni.cz
 Miodrag Vallat		miodrag@ifrance.com
 Morten Eriksen		mortene@sim.no
 Motoyuki Kasahara	m-kasahr@sra.co.jp
