@@ -82,11 +82,12 @@ site.exp: Makefile
 	@echo 'set tool $(DEJATOOL)' >>site.tmp
 	@echo 'set srcdir $(srcdir)' >>site.tmp
 	@echo "set objdir `pwd`" >>site.tmp
-?BUILD?	@echo 'set build_alias $(build_alias)' >>site.tmp
+## Quote the *_alias variables because they might be empty.
+?BUILD?	@echo 'set build_alias "$(build_alias)"' >>site.tmp
 ?BUILD?	@echo 'set build_triplet $(build_triplet)' >>site.tmp
-?HOST?	@echo 'set host_alias $(host_alias)' >>site.tmp
+?HOST?	@echo 'set host_alias "$(host_alias)"' >>site.tmp
 ?HOST?	@echo 'set host_triplet $(host_triplet)' >>site.tmp
-?TARGET?	@echo 'set target_alias $(target_alias)' >>site.tmp
+?TARGET?	@echo 'set target_alias "$(target_alias)"' >>site.tmp
 ?TARGET?	@echo 'set target_triplet $(target_triplet)' >>site.tmp
 	@echo '## All variables above are generated by configure. Do Not Edit ##' >>site.tmp
 	@test ! -f site.exp || \
