@@ -1,3 +1,8 @@
+2002-06-05  Miloslav Trmac  <trmac@popelka.ms.mff.cuni.cz>
+
+	* lib/am/dejagnu.am (site.exp): Quote build_alias, host_alias, and
+	target_alias.
+
 2002-05-31  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* test/cond22.test: Set SHELL when calling $MAKE -e.
@@ -11,7 +16,7 @@
 	(subobjname): Expect a list of condition/value pairs as input.
 	Combine this list and use it as the key to determine the variable name.
 	* test/cond22.test: New file.
-	* tests/Makefile.am (TESTS): Add cond21.test
+	* tests/Makefile.am (TESTS): Add cond22.test
 
 2002-05-24  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
